# CE216-project

./: CMakeLists.txt  CMakeLists.txt~  README.md  a.out  class1.h  contactPlugin.cc  contactPlugin.hh  contactPlugin.hh~  leg.blend  leg.blend1  leg.dae  listener.cc  main  main.cpp  main.cpp~  model.sdf  model_push (cylindrical legs with terrain).world  model_push.cc  model_push.cc_cp  model_push.hh  model_push.world  mountain.dae  mountain2.dae  plotPos.cc  plotPos.cc~  plotTest.cc  ramp.dae  spring.world  uneven terrain.dae
mis. files/: howto-octave-c++.ps  instable points.ods
pub_test/: listener.cc  pub.cc
pub_test/listener/: CMakeLists.txt  listener.cc
